# familiar

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: familiar.rb
config/: README.md  README.ru.md  kitty.conf  terminal.conf
config/keys/: mouse.conf  restored-defaults.conf  russian-ctrl.conf  splits.conf
config/look/: darcula.conf  ghostty.conf  tabs.conf
config/palette/: darcula.conf  ghostty.conf
docs/en/: log.md  review.md  session.md
docs/ru/: log.md  review.md  session.md
plugins/: log.py  review.py  session.py
plugins/modules/: clipboard.py  confirm.py  dragselect.py  draw.py  highlight.py  inputline.py  keylayout.py  overlay.py  pointer.py  text.py  theme.py  update.py
plugins/modules/log/: git.py  graph.py
plugins/modules/review/: editor.py  git.py  grep.py
plugins/modules/session/: data.py  markdown.py  preview.py  transcript.py  util.py
tests/: README.md  README.ru.md  kittymock.py  test_confirm.py  test_familiar_cli.py  test_highlight.py  test_inputline.py  test_log_git.py  test_log_graph.py  test_log_handler.py  test_navdef.py  test_navdef_imports.py  test_overlay.py  test_pointer.py  test_result_handlers.py  test_review_diff.py  test_review_find.py  test_review_git.py  test_review_goto.py  test_review_grep.py  test_review_handler.py  test_review_util.py  test_sessions_data.py  test_sessions_handler.py  test_sessions_markdown.py  test_sessions_transcript.py  test_sessions_util.py  test_theme.py  test_update.py
tools/: demo_stand.py
(+5 files in other folders)
